# runner

./: .gitignore  Cargo.toml  README.md  index.html  runner.sublime-project  runner_quicksilver_frontend.js  runner_quicksilver_frontend.wasm
core/: Cargo.toml
core/src/: color.rs  components.rs  data.rs  ecs.rs  entities.rs  frame_limiter.rs  game_loop.rs  game_world.rs  graphics.rs  input.rs  jump_physics.rs  lib.rs  main.rs  rect.rs  render.rs  resources.rs  systems.rs
core/src/components/: animatable.rs  icon.rs  letter.rs  player.rs  score.rs
core/src/data/: cloud_data.rs  enemy_data.rs  player_data.rs  world_data.rs
core/src/entities/: cloud_entity.rs  enemy_entity.rs  entity_remover.rs  icon_entity.rs  instruction_entitities_helper.rs  letter_entity.rs  score_entity.rs
core/src/graphics/: data.rs  textures.rs
core/src/resources/: event_queue.rs  game_play.rs  score.rs
core/src/systems/: cloud_system.rs  collision_system.rs  enemy_system.rs  event_system.rs  game_play_tick_updater.rs  player_system.rs  score_system.rs  score_updater.rs
frontend_utils/: Cargo.toml
frontend_utils/src/: fps.rs  lib.rs
quicksilver_frontend/: Cargo.toml
quicksilver_frontend/src/: color.rs  images.rs  input_manager.rs  main.rs  renderer.rs
quicksilver_frontend/static/: index.html
sdl2_frontend/: Cargo.toml
sdl2_frontend/src/: color.rs  frame_limiter.rs  input_manager.rs  main.rs  renderer.rs  textures.rs
src/: color.rs  components.rs  constants.rs  data.rs  entities.rs  game_world.rs  graphics.rs  input.rs  main.rs  renderer.rs  resources.rs  systems.rs  world_data.rs
src/components/: cloud.rs  drawable.rs  enemy.rs  ground.rs  input.rs  marker_components.rs  plant.rs  player.rs
src/data/: animation_data.rs  cloud_data.rs  enemy_data.rs  ground_data.rs  world_data.rs
src/entities/: cloud.rs  cloud_entity.rs  enemy.rs  enemy_entity.rs  ground.rs  ground_entity.rs  plant.rs  player.rs  player_entity.rs
src/graphics/: data.rs  textures.rs
src/resources/: event_queue.rs  frame_stepper.rs  game_finisher.rs  game_play.rs  game_play_tick.rs  game_tick.rs
src/systems/: cloud_system.rs  collision_system.rs  enemy_system.rs  event_system.rs  frame_limiter.rs  frame_stepper_updater.rs  game_play_tick_updater.rs  game_speed_updater.rs  game_tick_updater.rs  ground_system.rs  physics.rs  plant_system.rs  player_system.rs  power_optimizer_system.rs  rendering_system.rs
src/systems/physics/: ground_system.rs  player_system.rs
