[package]
name = "runner_core"
version = "0.1.0"
authors = ["Jayanthan Raveendiran <jayanthan.raveendiran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Instant that works on wasm too
instant = "0.1"

# Used for deciding where to put things on screen with randomness
rand = "0.7.3"

# specs is the ecs for our game
[dependencies.specs]
version = "0.16.1"
default-features = false
features = ["shred-derive", "specs-derive"]


[features]
# Desktop OSes can spawn threads but wasm target can't
desktop = ["specs/parallel"]

# To make rand work without issues on wasm target
web = ["rand/stdweb"]
