[package]
name = "runner_quicksilver_frontend"
version = "0.1.0"
authors = ["Jayanthan Raveendiran <jayanthan.raveendiran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for core game mechanics
runner_core = { path = '../core' }
runner_frontend_utils = { path = '../frontend_utils' }

# quicksilver is for windowing, input, rendering etc.
quicksilver = { version = "0.4.0-alpha0.3", default-features = false }

# specs is the ecs for our game
specs = { version = "0.16.1", default-features = false }

# for logging
log = "0.4.8"
console_log = { version = "0.2.0", optional = true }
simplelog = { version = "0.8.0", optional = true }

[features]
desktop = ["runner_core/desktop", "simplelog"]
web = ["runner_core/web", "quicksilver/stdweb", "console_log"]
