[package]
name = "runner_sdl2_frontend"
version = "0.1.0"
authors = ["Jayanthan Raveendiran <jayanthan.raveendiran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Provides the core game mechanics
runner_core = { path = '../core', features = ["desktop"] }

# Instant that works on wasm too
instant = "0.1"

# sdl2 is for windowing, input, rendering etc.
sdl2 = { version = "0.33.0", features = ["image"] }

# To deliver a single binary that contains all resources too
rust-embed = "5.5.1"

# specs is the ecs for our game
specs = "0.16.1"

# for logging
log = "0.4.8"
simplelog = "0.8.0"
